--- a/src/app/components/expense/dailyexpense/dailyexpense.component.html
+++ b/src/app/components/expense/dailyexpense/dailyexpense.component.html
@@ -52,7 +52,7 @@
                                 <th>Refrence Name</th>
                                 <th>Reference Cell</th>
                                 <th>Address</th>
-                                <th>New Entry</th>
+                                <th>Unpaid/Paid</th>
                                 <th>Action</th>
 
                             </tr>
@@ -65,8 +65,7 @@
                                 <td><span class="tag tag-success">Approved</span></td>
                                 <td><a class="">History</a></td>
                                 <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                <td><a routerLink="../dealerdetail" rel="noopener" class="btn btn-default"><i
-                                            class="fas fa-plus"></i></a></td>
+                                <td><a rel="noopener" class="btn btn-primary">Paid</a></td>
                                 <td>
                                     <a class="p-2" data-toggle="modal" data-target="#modal-default"><i
                                             class="fas fa-edit"></i></a>
@@ -82,8 +81,7 @@
                                 <td><span class="tag tag-warning">Pending</span></td>
                                 <td><a class="">History</a></td>
                                 <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                                <td><a routerLink="../dealerdetail" rel="noopener" class="btn btn-default"><i
-                                            class="fas fa-plus"></i></a></td>
+                                <td><a routerLink="../dealerdetail" rel="noopener" class="btn btn-danger">Unpaid</a></td>
                                 <td>
                                     <a class="p-2" data-toggle="modal" data-target="#modal-default"><i
                                             class="fas fa-edit"></i></a>
