--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="javascript:void()">SSA</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; {{dateFooter | date:'yyyy'}} <a href="javascript:void()">SSA</a>.</strong> All rights reserved.
 </footer>
