--- a/src/app/components/setting/setting/setting.component.html
+++ b/src/app/components/setting/setting/setting.component.html
@@ -167,7 +167,8 @@
                             <thead>
                                 <tr>
                                     <th>Code</th>
-                                    <th>Name</th>
+                                    <th>Representative Name</th>
+                                    <th>Dealer Name</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -175,6 +176,7 @@
                                 <tr *ngFor="let obj of representativeCommonResponse">
                                     <td>{{obj.representId}}</td>
                                     <td>{{obj.representativeName}}</td>
+                                    <td>{{GetDealerName(obj.dealerId)}}</td>
                                     <td>
                                         <a class="p-2"><i class="fas fa-edit"></i></a>
                                     </td>
